<resources>
    <string name="app_name">ExamFour_</string>
    <string name="x_and_o">X and O</string>
    <string name="_3x3">3X3</string>
    <string name="_4_x_4">4 X 4</string>
    <string name="select_dimension">Select Dimension</string>
    <string name="start_game">Start Game</string>
    <string name="_5_x_5">5 X 5</string>
    <string name="_3_x_3">3 X 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>